[gd_scene load_steps=12 format=3 uid="uid://bo7yw3wfnvsty"]

[ext_resource type="Script" path="res://hole.gd" id="1_cwm5f"]
[ext_resource type="MeshLibrary" uid="uid://g7rie4nh5rkf" path="res://assets/golf_tiles.tres" id="1_w0sof"]
[ext_resource type="PackedScene" uid="uid://nli8trj83d3q" path="res://arrow.tscn" id="2_erduj"]
[ext_resource type="PackedScene" uid="uid://b26svkjlvr100" path="res://ui.tscn" id="3_un0or"]
[ext_resource type="PackedScene" uid="uid://b5v31om1j1n3n" path="res://ball.tscn" id="5_4odiv"]
[ext_resource type="PackedScene" uid="uid://bhofkmw16gx71" path="res://camera_gimball.tscn" id="6_iuxaj"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_m20es"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_a2q0n"]
sky_material = SubResource("ProceduralSkyMaterial_m20es")

[sub_resource type="Environment" id="Environment_m5wkh"]
background_mode = 2
sky = SubResource("Sky_a2q0n")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_egb6x"]
rough = true
bounce = 0.5

[sub_resource type="CylinderShape3D" id="CylinderShape3D_u5kat"]
height = 0.25
radius = 0.08

[node name="Hole" type="Node3D"]
script = ExtResource("1_cwm5f")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 3.2021, 0)
light_color = Color(1, 0.996078, 0.886275, 1)
shadow_enabled = true
directional_shadow_max_distance = 40.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_m5wkh")

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("1_w0sof")
physics_material = SubResource("PhysicsMaterial_egb6x")
cell_size = Vector3(1, 1, 1)
data = {
"cells": PackedInt32Array(0, 0, 0, 1, 0, 1441792, 1, 1, 655364, 0, 1, 655366, 65535, 1, 1048608, 65534, 1, 1048612, 1, 2, 39, 65533, 1, 1441801, 1, 3, 11)
}

[node name="Area3D_hole" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.50261, 0, 3.49949)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D_hole"]
shape = SubResource("CylinderShape3D_u5kat")

[node name="Tee" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.61545, 0.680295, 1.50164)

[node name="Arrow" parent="." instance=ExtResource("2_erduj")]

[node name="ui" parent="." instance=ExtResource("3_un0or")]

[node name="Ball" parent="." instance=ExtResource("5_4odiv")]

[node name="CameraGimball" parent="." instance=ExtResource("6_iuxaj")]

[connection signal="body_entered" from="Area3D_hole" to="." method="_on_area_3d_hole_body_entered"]
[connection signal="stopped" from="Ball" to="." method="_on_ball_stopped"]
